# django-simple-scim

./: README.md  app.json  pyproject.toml
demo/: settings.py  urls.py
heroku/: settings.py
simple_scim/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
simple_scim/migrations/: 0001_initial.py
tests/: test_simple_scim.py
