[tool.poetry]
name = "django-simple-scim"
version = "0.1.0"
description = "Django app to implement SCIM 2.0 for User management."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-simple-scim"
repository = "https://github.com/yunojuno/django-simple-scim"
documentation = "https://github.com/yunojuno/django-simple-scim"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "simple_scim" }]

[tool.poetry.dependencies]
python = "3.12.0"
django = "^3.2 || ^4.0 || ^5.0"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pre-commit = "*"
ruff = "*"

[tool.poetry.group.test.dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

[tool.poetry.group.heroku]
optional = true

[tool.poetry.group.heroku.dependencies]
dj-database-url = "*"
gunicorn = "*"
psycopg2-binary = "*"
whitenoise = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
